Fixed mass search not working on mobiles. Also allowed screens to be smaller than 360px and lines not be messed up.

--- a/src/ConnectingLines.css
+++ b/src/ConnectingLines.css
@@ -37,6 +37,24 @@
 }
 
   /* Media */
+
+@media(max-width: 360px){
+  .line-1 {
+    @apply top-[11.45rem] right-[3.4rem] h-[7.1rem] rotate-[160deg];
+  }
+  
+  .line-2{
+    @apply top-[19.7rem] right-[6.9rem] h-[2.75rem] rotate-[110deg];
+  }
+  
+  .line-3{
+    @apply top-[26.45rem] right-[6.7rem] h-[3.1rem] rotate-[60deg];
+  }
+  
+  .line-4 {
+    @apply top-[29.75rem] right-[3.6rem] h-[7.75rem] rotate-[15deg];
+  }
+}
   
 @media(min-width: 380px){
   .line-1 {
