--- a/src/Landing.css
+++ b/src/Landing.css
@@ -186,6 +186,15 @@ body.dark-mode text{
     @apply relative right-[-6.4rem] top-[-2px]
 }
 
+@media(max-width: 360px){
+    .year-select-container{
+        @apply ml-5
+    }
+
+    .composition-select-container{
+        @apply ml-5
+    }
+}
 
 @media(min-width:600px){
     .landing-container{
